<resources>
    <string name="app_name">Labs</string>
    <string name="text_view1">TextView1</string>
    <string name="text_view2">TextView2</string>
    <string name="gallery">Gallery</string>
    <string name="user_profile">Profile</string>
    <string name="phone_stats">Phone Stats</string>
    <string name="home">Home</string>
    <string name="load_image">Load Image</string>
    <string name="edit_user_profile">Edit User profile</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="pick_image_intent_text">asd</string>
    <string name="non_saved_warning">your data might not have been saved. do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="menu">Menu</string>
    <string name="register">Register</string>
    <string name="ololo">ololo</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="log_out">Log out</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>

    <!--Firebase Database Fields -->
    <string name="db_users_field_first_name">first_name</string>
    <string name="db_users_field_last_name">last_name</string>
    <string name="db_users_field_email">email</string>
    <string name="db_users_field_id">id</string>
    <string name="db_users_field_phone">phone</string>
    <string name="db_users_field_avatar_path">profile_image</string>
    <string name="contact_email">contact email</string>
    <string name="rss_address">rss address</string>
    <string name="sync">Sync</string>


</resources>
