<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home" />
        <item
            android:id="@+id/phoneState"
            android:title="@string/phone_stats" />
        <item
            android:id="@+id/userProfile"
            android:title="@string/user_profile" />

        <!--<item
            android:id="@+id/editUserProfile"
            android:title="@string/edit_user_profile" />-->

        <item
            android:id="@+id/ololoFragment"
            android:title="@string/ololo" />

        <!--<item
            android:id="@+id/registerUserFragment"
            android:title="@string/register"/> -->
    </group>
</menu>