<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editUserProfile_Fragment"

    tools:context="layout.EditUserProfileFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <ImageView
            android:id="@+id/avatarEditImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="500px"
            android:maxHeight="400px"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="top"
            tools:src="@tools:sample/avatars" />
        <!--android:maxWidth="500px"
            android:maxHeight="400px"-->

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="1"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="2"/>


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/contact_email"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="3"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="4"/>

        <EditText
            android:id="@+id/rssAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/rss_address"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="5"/>

        <Button
            android:id="@+id/loadPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_image"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/syncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_column="2"
            android:layout_row="6"
            android:gravity="center"
            />
    </GridLayout>

</ScrollView>